# ocr-extraction

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
backend/: database.py  main.py  models.py
backend/api/routers/: cost_tracker_router.py  extraction_router.py  mapping_router.py  prompt_router.py  review_router.py  sap_invoice_router.py
backend/assets/: item_list.csv  prompt.yml  sap invoice required field details.csv  series.csv  vendor_list.csv
backend/core/: config.py
backend/services/: add_to_neo4j.py  classification.py  itemname_mapper.py  mapping.py  neo4j_mapper.py  ocr_processor.py  pinecone_loader.py  sap_api.py  save_neo4j_items.py
backend/services/mapper/: item_mapper.py  pinecone_itemname_mapper.py
backend/utils/: cost_calc.py  cost_queries.py  cost_tracker.py  pc.ipynb  pinecone_retriever.py
