[project]
name = "ocr-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-huggingface>=1.2.0",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.0.7",
    "mistralai>=1.10.1",
    "pandas>=3.0.0",
    "pinecone>=7.3.0",
    "pinecone-notebooks>=0.1.1",
    "pinecone-text>=0.11.0",
    "pymongo>=4.16.0",
    "rapidfuzz>=3.14.3",
    "sentence-transformers>=5.2.0",
]
